Empezando a implementar la funcionalidad de crear un proyecto nuevo asiciando un cliente y las dependencias de este para generra el proyecto en las dependencias asiciadas, el progrese va de la siguiente manera, se filtra la lista de clientes existentes, se selecciona un cliente, se asocian las dependencias filtrando or caracteristicas, se seleccionan las dependencias se crea el proyecto, se abre un modal con la informacion obtenida